@@ -20,9 +20,11 @@
 #define F_GSORT_RESETPOS                (a32 << 3)
 #define F_GSORT_NUMERIC                 (a32 << 4)
 #define F_GSORT_STRING                  (a32 << 5)
+#define F_GSORT_F_DATE                  (a32 << 6)
 
 #define F_GSORT_ORDER                   (F_GSORT_DESC|F_GSORT_ASC)
 #define F_GSORT_TYPE                    (F_GSORT_NUMERIC|F_GSORT_STRING)
+#define F_GSORT_TYPE_F                  (F_GSORT_STRING|F_GSORT_F_DATE)
 
 #define MAX_SORT_LOOPS                          MAX_uint64_t
 
@@ -45,6 +47,8 @@ typedef struct g_sref_data
   size_t off;
   char m_buf1[4096], m_buf2[4096];
   _d_drt_h mppd;
+  int64_t off_right;
+  void *sp_0;
 } _srd, *__p_srd;
 
 typedef int
@@ -56,5 +60,12 @@ int
 opt_g_sort(void *arg, int m);
 int
 g_sort(__g_handle hdl, char *field, uint32_t flags);
+void
+g_heapsort(void **ref_arr, int64_t offset, int64_t dummy, __p_srd psrd);
+void
+g_qsort(void **arr, int64_t left, int64_t right, __p_srd psrd);
+
+typedef void
+(*__d_sort_p)(void **arr, int64_t left, int64_t right, __p_srd psrd);
 
 #endif /* SORT_HDR_H_ */
