@@ -56,6 +56,7 @@
  *   - % Accumulators processing grouped with general matching routines (had separate routine before) (rev. 11_b7)
  *   - + 'depth' field (FILESYSTEM), see DATA_STRUCTURES (rev. 11_b7)
  *   - ~ Left/right LOM math data structures overlapping (rev. 11_b8)
+ *   - + Sort currend directory (-x) (rev. 11_b9)
  *
  * v2.3:
  *
